proyecto de presentacion

--- a/Implementacion/ModuloServidor/SERVER-MODULE/.settings/org.eclipse.wst.common.component
+++ b/Implementacion/ModuloServidor/SERVER-MODULE/.settings/org.eclipse.wst.common.component
@@ -1,5 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="SERVER-MODULE">
         <wb-resource deploy-path="/" source-path="/EarContent" tag="defaultRootSource"/>
+        <dependent-module archiveName="SERVER-MODULE-PERSISTENCE.jar" deploy-path="/" handle="module:/resource/SERVER-MODULE-PERSISTENCE/SERVER-MODULE-PERSISTENCE">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="SERVER-MODULE-BUSSINESS.jar" deploy-path="/" handle="module:/resource/SERVER-MODULE-BUSSINESS/SERVER-MODULE-BUSSINESS">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="SERVER-MODULE-SERVICES.war" deploy-path="/" handle="module:/resource/SERVER-MODULE-SERVICES/SERVER-MODULE-SERVICES">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="SERVER-MODULE-PRESENTATION.war" deploy-path="/" handle="module:/resource/SERVER-MODULE-PRESENTATION/SERVER-MODULE-PRESENTATION">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
