--- a/Implementacion/ModuloServidor/SERVER-MODULE/.settings/org.eclipse.wst.common.component
+++ b/Implementacion/ModuloServidor/SERVER-MODULE/.settings/org.eclipse.wst.common.component
@@ -13,5 +13,9 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="SERVER-MODULE-PRESENTATION.war" deploy-path="/" handle="module:/resource/SERVER-MODULE-PRESENTATION/SERVER-MODULE-PRESENTATION">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
