Formularios de inicio y registro

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/market.css
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/market.css
@@ -36,3 +36,9 @@
 	.modal.container {
 		max-width: none;
 	}
+	
+	.modalChocolate{
+		background-color: white; 
+		display: none;
+		width: 450px;
+	}
