--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/market.css
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/market.css
@@ -57,3 +57,28 @@
 		top: 47px;
 		z-index: 10 !important;
 	}
+	
+	.carouselInicio{
+		padding-left: 15em;
+		padding-top: 47px;
+	}
+	
+	.divContenidosInicial{
+		height:300px; 
+/*		margin-left: auto;*/
+	}
+	
+	.color1Inicio{
+		background-color: #66CC66;
+		margin-left: auto;
+	}
+
+	.color2Inicio{
+		background-color: #66CC99;
+	}
+
+	.color3Inicio{
+		background-color: #66CCCC;
+		margin-left: auto;
+	}
+	
