--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/admin.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/admin.html
@@ -1,18 +1,6 @@
-<link rel="stylesheet" type="text/css" href="css/Admin_Home.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="../css/Admin_Home.css" media="screen" />
 <!DOCTYPE html>
 <html>
-
-<script type="text/javascript">
-!function ($) {
-  $(function(){
-    // carousel demo
-    $('#myCarousel').carousel()
-  })
-}(window.jQuery)
-
-</script>
-
-
 
 <head>
 <meta charset="ISO-8859-1">
@@ -34,7 +22,7 @@
 	<div class="container marketing">
 		<div class="row-fluid">
 			<div class="span4">
-				<div class="item"><img class="span12" src="img/managerprofile.jpg"></img></div>
+				<div class="item"><img class="span12" src="../img/managerprofile.jpg"></img></div>
 			</div>
 			<div class="span8" aling="center">
 				<p style="font-size: 25px;">Nos comprometemos a mejorar tu seguridad, proteger tu privacidad y desarrollar herramientas sencillas que te permitan elegir y controlar</p>
@@ -51,7 +39,7 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span2">
-				<img class="span12" src="img/abmAdministrador.jpg">
+				<img class="span12" src="../img/abmAdministrador.jpg">
 			</div>
 			<div class="span4">
 				<p>
@@ -60,7 +48,7 @@
 				<a href="#" class="btn btn-primary" role="button">Ir</a>
 			</div>
 						<div class="span2">
-				<img class="span12" src="img/censored.jpg">
+				<img class="span12" src="../img/censored.jpg">
 			</div>
 			<div class="span4">
 				<p>
@@ -71,7 +59,7 @@
 		</div>
 		<div class="row-fluid">
 			<div class="span2">
-				<img class="span12" src="img/registro_acceso.jpg">
+				<img class="span12" src="../img/registro_acceso.jpg">
 			</div>
 			<div class="span4">
 				<p>
@@ -81,7 +69,7 @@
 				<a href="#" class="btn btn-primary" role="button">Ver</a>
 			</div>
 			<div class="span2">
-				<img class="span12" src="img/aprobar_rechazar.jpg">
+				<img class="span12" src="../img/aprobar_rechazar.jpg">
 			</div>
 			<div class="span4">
 				<p>
@@ -110,9 +98,9 @@
 	</div>
 </body>
 
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" media="screen" />
-<link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="../css/bootstrap.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="../css/bootstrap-responsive.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="../jquery-ui.css" media="screen" />
 
 </html>
 
