arreglo css para que las miniaturas no destrozen todo

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/market.css
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/market.css
@@ -23,6 +23,11 @@
 		font-weight: bold;	
 	}
 
+	.miniatura{
+		max-height: 204px;
+		max-width: 300px;
+	}
+	
 	.modal {
 		left: 50%;
 		bottom: auto;
