--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/bootstrap.css
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/css/bootstrap.css
@@ -4981,6 +4981,7 @@ a.thumbnail:focus {
 .thumbnail > img {
   margin-right: auto;
   margin-left: auto;
+  max-height: 204px; max-width: 300px;
 }
 
 .thumbnail .caption {
