Almacenamiento de sesion en localStorage // Primer Version vista de contenido

--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -1,1 +1,119 @@
-PElos
+<link rel="stylesheet" type="text/css" href="../css/bootstrap.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="../css/bootstrap-responsive.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="../css/market.css" media="screen" />
+<link rel="stylesheet" type="text/css" href="../css/jquery-ui.css" media="screen" />
+
+<script src="../js/jquery.min.js"></script>
+
+<body>
+
+<!-- BARRA DE NAVEGACION -->
+	<nav class="navbarFija navbar navbar-default " style="position: fixed !important;width: 100%;" role="navigation">
+	  <!-- El logotipo y el icono que despliega el menú se agrupan
+	       para mostrarlos mejor en los dispositivos móviles -->
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle" data-toggle="collapse"
+				data-target=".navbar-ex1-collapse">
+				<span class="sr-only">Desplegar navegación</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="#">Market Place Tecnologo</a>
+		</div>
+		<div class="collapse navbar-collapse navbar-ex1-collapse"> 
+			<form class="navbar-form navbar-left" role="search">
+				<div class="form-group">
+					<input type="search" class="form-control" placeholder="Buscar">
+				</div>
+				<button class="btn btn-primary barraBusquedaHome" style="margin-top: initial;">
+					<span class="glyphicon glyphicon-search"></span> Buscar</button>
+			</form>
+			<div class="col-md-2 pull-right" id="Login-Registro-Div">
+			<!---->
+				<a href="#" class="btn btn-primary barraBusquedaHome" role="button" data-toggle="dropdown">Registrarse</a>
+				<ul class="dropdown-menu col-md-2 ">
+					<li><a href="#" onclick="setRegistroTipo('proveedor');mostrarElemento('registroUsuario')">Soy Proveedor</a></li>
+					<li><a href="#" onclick="setRegistroTipo('cliente');mostrarElemento('registroUsuario')">Soy Cliente</a></li>
+				</ul>
+				<button class="btn btn-primary barraBusquedaHome" onclick="mostrarElemento('loginUsuario')">Login</button>
+			</div>
+			<div class="col-md-2 pull-right" id="Nick-Logout-Div" hidden>
+				<a href="#" class="nick">nick</a>
+				<a href="#" onclick="logoutUsuario()">(Logout)</a>
+			</div>
+		</div>
+	</nav>
+
+<!--LOGIN DE USUARIO -->
+	<div id="loginUsuario" class="modalChocolate modal" hidden style="overflow-y: auto;
+		display: block;width: 26%;min-width: 300px;margin-right: auto;">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="ocultarElemento('loginUsuario')">X</button>
+			<h3>Iniciar Sesion</h3>
+		</div>
+		<div class="modal-body">
+			<div class="row">
+				<div class="col-md-12">
+					<h4>Datos de Usuario</h4>
+					<p>Correo    			<input type="text" class="col-md-12 form-control" id="loginCorreo"></p>
+					<p>Contrase&ntilde;a    <input type="password" class="col-md-12 form-control" id="loginPass"></p>
+				</div>
+			</div>
+		</div>
+		<div class="modal-footer">
+			<button type="button" data-dismiss="modal" class="btn" onclick="ocultarElemento('loginUsuario')">Cerrar</button>
+			<button type="button" class="btn btn-primary" onclick="IniciarSesion()">Confirmar</button>
+		</div>
+	</div>
+
+<!--REGISTRO DE USUARIO -->
+	<div id="registroUsuario" class="modalChocolate modal" hidden style="overflow-y: auto;display: block;width: 26%;min-width:500px;margin-right: auto;">
+		<div class="modal-header">
+	    	<button type="button" class="close" data-dismiss="modal" aria-hidden="true" 
+	    		onclick="ocultarElemento('registroUsuario')">X</button>
+	    	<h3>Registro de Usuario</h3>
+	  	</div>
+		<div class="modal-body">
+			<div class="row">
+				<div class="col-md-6">
+					<h4>Datos de Usuario</h4>
+					<p>Correo    			<input type="email" class="col-md-12 form-control" id="inputCorreo"></p>
+					<p>Contrase&ntilde;a    <input type="password" class="col-md-12 form-control" id="inputPass"></p>
+					<p>Contrase&ntilde;a    <input type="password" class="col-md-12 form-control" id="inputPass2"></p>
+					<p>Nombre Usuario  		<input type="text" class="col-md-12 form-control" id="inputNick"></p>
+					<p id="sitioWeb_p">Sitio Web 	  		<input type="text" class="col-md-12 form-control" id="inputWeb"></p>
+				</div>
+				<div class="col-md-6">
+					<h4>Datos Personales</h4>
+					<p>Nombres	    		<input type="text" class="col-md-12 form-control" id="inputNombre"></p>
+					<p>Apellidos    		<input type="text" class="col-md-12 form-control" id="inputApellido"></p>
+					<p>Sexo 
+						<select id="inputSexo" class="col-md-12 form-control">
+							<option value="masculino" selected>Hombre</option>
+							<option value="femenino">Mujer</option>
+						</select>
+					</p>					
+					<p>Fecha de Nacimiento  <input type="text" class="col-md-12 form-control" id="inputFecha"></p>
+					<p>Telefono Movil    	<input type="tel" class="col-md-12 form-control" id="inputTel" onkeypress="return onlyNumbersDano(event)"></p>
+				</div>
+			</div>
+		</div>
+		<div class="modal-footer">
+			<button type="button" data-dismiss="modal" class="btn" onclick="ocultarElemento('registroUsuario')">Cerrar</button>
+			<button type="button" class="btn btn-primary" onclick="crearProveedor()">Confirmar</button>
+		</div>
+	</div>
+
+</body>
+
+<script src="../js/jquery-ui.js"></script>
+<script src="../js/globalesProyecto.js"></script>
+<script src="../js/Prototipos.js"></script>
+<script src="../js/holder.js"></script>
+<script src="../js/bootstrap.js"></script>
+<script src="../js/LlamadasAjax.js"></script>
+<script src="../js/getSet.js"></script>
+<script src="../js/eventos.js"></script>
+<script src="../js/Comunes.js"></script>
+<script src="../js/contenidos.js"></script>
