--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -105,6 +105,22 @@
 		</div>
 	</div>
 
+<!-- CONTENIDO / CUERPO DE LA VISTA-->
+	<div id="aplicacion1"  class="col-sm-5 col-md-3">
+		<div class="thumbnail">
+			<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
+			<div class="caption">
+				<h3>Aplicacion 4</h3>
+				<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
+				<p class="precio">
+					<a href="#" class="btn btn-primary" role="button">Ver</a>
+					<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>						
+					USD 2.0
+				</p>
+			</div>
+		</div>
+	</div>
+
 </body>
 
 <script src="../js/jquery-ui.js"></script>
@@ -116,4 +132,4 @@
 <script src="../js/getSet.js"></script>
 <script src="../js/eventos.js"></script>
 <script src="../js/Comunes.js"></script>
-<script src="../js/contenidos.js"></script>
+<script src="../js/contenido.js"></script>
