--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -8,7 +8,7 @@
 <body>
 
 <!-- BARRA DE NAVEGACION -->
-	<nav class="navbarFija navbar navbar-default " style="position: fixed !important;width: 100%;" role="navigation">
+	<nav class="navbar navbar-default " style="position: fixed !important;width: 100%;" role="navigation">
 	  <!-- El logotipo y el icono que despliega el menú se agrupan
 	       para mostrarlos mejor en los dispositivos móviles -->
 		<div class="navbar-header">
@@ -106,19 +106,13 @@
 	</div>
 
 <!-- CONTENIDO / CUERPO DE LA VISTA-->
-	<div id="aplicacion1"  class="col-sm-5 col-md-3">
-		<div class="thumbnail">
-			<img src="img/mu1.jpg" alt="img/mu1.jpg" class="img-circle miniatura">
-			<div class="caption">
-				<h3>Aplicacion 4</h3>
-				<p>Laslasdkamskldn dkla sjdklasd aklsjdkl ajskldjaskl djklasjd</p>
-				<p class="precio">
-					<a href="#" class="btn btn-primary" role="button">Ver</a>
-					<a href="http://localhost:8080/SERVER-MODULE-SERVICES/FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>						
-					USD 2.0
-				</p>
-			</div>
-		</div>
+	<div id="MP_Content"  class="col-md-4" style="padding-top: 5em;text-align: center;">
+	</div>
+	<<div id="MP_Canvas" class="col-md-7" style="background-color:red;padding-top: 5em;text-align: center;">
+		PELOOOO
+
+		oooo
+		
 	</div>
 
 </body>
@@ -126,6 +120,7 @@
 <script src="../js/jquery-ui.js"></script>
 <script src="../js/globalesProyecto.js"></script>
 <script src="../js/Prototipos.js"></script>
+<script src="../js/Objetos.js"></script>
 <script src="../js/holder.js"></script>
 <script src="../js/bootstrap.js"></script>
 <script src="../js/LlamadasAjax.js"></script>
