--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -108,11 +108,16 @@
 <!-- CONTENIDO / CUERPO DE LA VISTA-->
 	<div id="MP_Content"  class="col-md-4" style="padding-top: 5em;text-align: center;">
 	</div>
-	<<div id="MP_Canvas" class="col-md-7" style="background-color:red;padding-top: 5em;text-align: center;">
-		PELOOOO
-
-		oooo
-		
+	<div id="MP_Canvas" class="col-md-7" style="padding-top: 5em;">
+		<h4 id="MP_Descripcion"></h4>
+		Puntuacion: 
+		<img id="star1" src="../img/estrellaAct.png" alt="../img/estrellaAct.png">
+		<img id="star2" src="../img/estrellaAct.png" alt="../img/estrellaAct.png">
+		<img id="star3" src="../img/estrellaAct.png" alt="../img/estrellaAct.png">
+		<img id="star4" src="../img/estrellaAct.png" alt="../img/estrellaAct.png">
+		<img id="star5" src="../img/estrellaNoAct.png" alt="../img/estrellaNoAct.png">
+		<p id="MP_Precio" class="precioContenido"></p>
+		<a href="FileDispatcherServlet?usr=pedro&tkn=asdetljkahsdlgasbcxmgaksdgaksdhbcx&file=contenido_no_porno" class="btn btn-default" role="button">Comprar</a>	
 	</div>
 
 </body>
