--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -3,7 +3,6 @@
     <title>MarketPlace Tecnologo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.css" media="screen" />
-	<link rel="stylesheet" type="text/css" href="../css/bootstrap-responsive.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../css/market.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../css/jquery-ui.css" media="screen" />
 
@@ -11,6 +10,16 @@
 </head>
 
 <body>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1&appId=461659287217589";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
 
 <!-- BARRA DE NAVEGACION -->
 	<nav class="navbar navbar-default" role="navigation">
@@ -148,8 +157,9 @@
 		------------------------------------
 		<h4>Me gusta mucho este contenido :D</h4>
 	</div>
+	<div class="fb-like" data-href="http://127.0.0.1:8080/SERVER-MODULE-PRESENTATION/" data-width="80" data-layout="box_count" data-action="like" data-show-faces="false" data-share="false"></div>
 </body>
-
+setRegistroTipo('cliente');
 <script src="../js/jquery-ui.js"></script>
 <script src="../js/globalesProyecto.js"></script>
 <script src="../js/Prototipos.js"></script>
