--- a/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
+++ b/Implementacion/ModuloServidor/SERVER-MODULE-PRESENTATION/WebContent/views/content.html
@@ -11,14 +11,20 @@
 
 <body>
 
-<div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1&appId=461659287217589";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+	<div id="fb-root"></div>
+	<script>
+		(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/es_LA/all.js#xfbml=1&appId=461659287217589";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
+	</script>
+
+	<script>
+		!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');
+	</script>
 
 
 <!-- BARRA DE NAVEGACION -->
@@ -157,9 +163,13 @@
 		------------------------------------
 		<h4>Me gusta mucho este contenido :D</h4>
 	</div>
-	<div class="fb-like" data-href="http://127.0.0.1:8080/SERVER-MODULE-PRESENTATION/" data-width="80" data-layout="box_count" data-action="like" data-show-faces="false" data-share="false"></div>
+	<div class="facebookLike">	
+	<a href="https://twitter.com/share" class="twitter-share-button" data-lang="es" data-count="none" data-dnt="true">Twittear</a>
+	<div class="fb-like" data-href="http://127.0.0.1:8080/SERVER-MODULE-PRESENTATION/" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+	</div>
+
 </body>
-setRegistroTipo('cliente');
+
 <script src="../js/jquery-ui.js"></script>
 <script src="../js/globalesProyecto.js"></script>
 <script src="../js/Prototipos.js"></script>
